# NexusDoc

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json
app/core/: config.py  model_registry.py
app/core/providers/: base.py  definitions.py  groq_provider.py  messages.py  ollama_provider.py
app/rag/: pipeline.py
data/sample_docs/: appliance_manual_excerpt.txt  appliance_manual_excerpt_ja.txt
misc/: Notes.md
plans/: 01-foundation-walkthrough-progress.md  01-foundation-walkthrough.md  02-ingestion-walkthrough-progress.md  02-ingestion-walkthrough.md  README.md  week-1-foundation-walkthrough.md
prompts/: walkthrough_preamble.txt
scripts/: generate_crypto.py  test_langfuse.py  test_rag.py  utils.py  verify_e2e_phase1.py
tests/: conftest.py  test_model_registry.py
tools/: generate_diagrams.py  update_readme.py
