[project]
name = "nexusdoc"
version = "0.1.0"
description = "Multi-Agent Document Intelligence Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "groq>=0.20.0",
  "openai>=1.0.0",
  "ollama>=0.4.0",
  "langfuse>=3.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "numpy>=1.26.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "vcrpy>=7.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
